# aoc2022

./: Cargo.toml
.github/workflows/: ci.yaml
days/: Cargo.toml
days/src/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day10.rs  day11.rs  lib.rs  main.rs
macros/: Cargo.toml
macros/src/: lib.rs
output/: day10-p2.txt
src/: day01.rs  day02.rs  day06.rs  day08.rs  day09.rs  day10.rs  day12.rs  day13.rs  day14.rs  lib.rs  main.rs  parser.rs
