[package]
name = "days"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell.workspace = true
regex.workspace = true
paste.workspace = true
itertools.workspace = true
macros = { path = "../macros" }